# networking-l2gw

./: .coveragerc  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
contrib/: README_install_and_config_l2gateway_plugin.rst  README_install_l2gateway_agent.rst  install_and_config_l2gateway_plugin.sh  install_l2gateway_agent.sh  neutron-l2gateway-agent.conf
debian/: changelog  control  rules
devstack/: README.rst  devstackgaterc  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: l2gateway_agent.ini  l2gw_plugin.ini  policy.json
networking-l2gw/locale/: networking-l2gw.pot
networking_l2gw/: __init__.py  _i18n.py
networking_l2gw/cmd/eventlet/: __init__.py  agent.py
networking_l2gw/db/l2gateway/: db_query.py  head.py  l2gateway_db.py  l2gateway_models.py
networking_l2gw/db/l2gateway/ovsdb/: lib.py  models.py
networking_l2gw/db/migration/: cli.py
networking_l2gw/db/migration/alembic_migrations/: README  env.py
networking_l2gw/db/migration/alembic_migrations/versions/: 42438454c556_l2gateway_models.py  54c9c8fe22bf_db_models_for_ovsdb_hardware_vtep_schema.py  CONTRACT_HEAD  EXPAND_HEAD  HEAD  HEADS  kilo_release.py  start_networking_l2gw.py
networking_l2gw/db/migration/alembic_migrations/versions/liberty/contract/: 79919185aa99_initial_contract.py
networking_l2gw/db/migration/alembic_migrations/versions/liberty/expand/: 2f74f68043b2_adding_inter_cloud_connection_support.py  60019185aa99_initial_expand.py
networking_l2gw/db/migration/alembic_migrations/versions/newton/contract/: 2f533f7705dd_rename_tenant_to_project.py  96191add2197_allow_vlan_binding_0.py
networking_l2gw/db/migration/alembic_migrations/versions/newton/expand/: 49ce408ac349_add_indexes_to_tenant_id.py
networking_l2gw/db/migration/alembic_migrations/versions/queens/contract/: 0fb45e525aa9_add_standard_attribute_id_for_l2gw.py
networking_l2gw/db/migration/alembic_migrations/versions/queens/expand/: 8d7d772eafcf_add_standard_attribute_id_for_l2gw.py
networking_l2gw/extensions/: l2gateway.py  l2gatewayconnection.py  l2remotegateway.py  l2remotegatewayconnection.py  l2remotemac.py
networking_l2gw/l2gatewayclient/: shell.py  version.py
networking_l2gw/l2gatewayclient/l2gateway/v2_0/: __init__.py  l2gateway.py  l2gateway_connection.py
networking_l2gw/l2gatewayclient/l2gw_client_ext/: _l2_gateway.py  _l2_gateway_connection.py  _l2_remote_gateway.py  _l2_remote_gateway_connection.py  _l2_remote_mac.py
networking_l2gw/l2gatewayclient/osc/: l2gw.py  l2gw_connection.py
networking_l2gw/l2gatewayclient/v2_0/: client.py
networking_l2gw/services/l2gateway/: agent_scheduler.py  exceptions.py  l2gw_agent.py  plugin.py
networking_l2gw/services/l2gateway/agent/: agent_api.py  base_agent_manager.py  l2gateway_config.py
networking_l2gw/services/l2gateway/agent/ovsdb/: README.rst  api.py  base_connection.py  commands.py  connection.py  impl_idl.py  manager.py  ovsdb_common_class.py  ovsdb_connection.py  ovsdb_model.py  ovsdb_monitor.py  ovsdb_writer.py
networking_l2gw/services/l2gateway/agent/ovsdb/native/: commands.py  connection.py
networking_l2gw/services/l2gateway/common/: config.py  constants.py  l2gw_validators.py  ovsdb_schema.py  topics.py  tunnel_calls.py
networking_l2gw/services/l2gateway/ovsdb/: data.py  lib.py  models.py
networking_l2gw/services/l2gateway/service_drivers/: __init__.py  agent_api.py  rpc_l2gw.py
networking_l2gw/tests/: test_networking_l2gw.py
networking_l2gw/tests/api/: base_l2gw.py  test_l2gw_extensions.py  test_l2gw_negative.py
networking_l2gw/tests/contrib/: post_test_hook.sh
networking_l2gw/tests/fullstack/: test_l2gw.py
networking_l2gw/tests/scenario/: ovsdb_connections.py  test_l2gateways.py
networking_l2gw/tests/tempest/: config.py  plugin.py
networking_l2gw/tests/tempest/etc/: tempest.conf.sample
networking_l2gw/tests/unit/db/: test_l2gw_db.py  test_migrations.py
networking_l2gw/tests/unit/db/ovsdb/: test_idl_impl.py  test_lib.py
networking_l2gw/tests/unit/l2gatewayclient/: test_cli20.py  test_cli20_l2gateway.py  test_cli20_l2gateway_connection.py  test_cli20_l2gw_conn_ext.py  test_cli20_l2gw_ext.py
networking_l2gw/tests/unit/l2gatewayclient/osc/: fakes.py  test_osc_l2gw.py  test_osc_l2gw_connection.py
networking_l2gw/tests/unit/services/l2gateway/: test_agent_scheduler.py  test_plugin.py
networking_l2gw/tests/unit/services/l2gateway/agent/: test_agent_api.py  test_base_agent_manager.py  test_l2gw_agent.py
networking_l2gw/tests/unit/services/l2gateway/agent/ovsdb/: test_base_connection.py  test_connection.py  test_manager.py  test_ovsdb_monitor.py  test_ovsdb_writer.py
networking_l2gw/tests/unit/services/l2gateway/common/: test_l2gw_validators.py  test_tunnel_calls.py
networking_l2gw/tests/unit/services/l2gateway/ovsdb/: test_data.py  test_lib.py
networking_l2gw/tests/unit/services/l2gateway/service_drivers/: test_agent_api.py  test_rpc_l2gw.py
specs/kilo/: l2-gateway-api-implementation.rst  l2-gateway-api.rst
specs/newton/: l2-border-gateway-api.rst  l2-border-gateway-implementation.rst
tools/: tox_install.sh
