[metadata]
name = networking-l2gw
summary = API's and implementations to support L2 Gateways in Neutron.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_l2gw
data_files =
    etc/neutron =
        etc/l2gateway_agent.ini

[entry_points]
console_scripts =
    neutron-l2gateway-agent = networking_l2gw.services.l2gateway.l2gw_agent:main
    neutron-l2gw = networking_l2gw.l2gatewayclient.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_l2gw/locale
domain = networking-l2gw

[update_catalog]
domain = networking-l2gw
output_dir = networking_l2gw/locale
input_file = networking_l2gw/locale/networking-l2gw.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_l2gw/locale/networking-l2gw.pot
