[metadata]
name = networking-l2gw
summary = API's and implementations to support L2 Gateways in Neutron.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/networking-l2gw
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_l2gw
data_files =
    etc/neutron =
        etc/l2gateway_agent.ini
        etc/l2gw_plugin.ini

[entry_points]
console_scripts =
    neutron-l2gateway-agent = networking_l2gw.cmd.eventlet.agent:main
neutron.db.alembic_migrations =
    networking-l2gw = networking_l2gw.db.migration:alembic_migrations
neutronclient.extension =
    l2_gateway_connection = networking_l2gw.l2gatewayclient.l2gw_client_ext._l2_gateway_connection
    l2_gateway = networking_l2gw.l2gatewayclient.l2gw_client_ext._l2_gateway
openstack.neutronclient.v2 =
    l2gw_create = networking_l2gw.l2gatewayclient.osc.l2gw:CreateL2gw
    l2gw_list = networking_l2gw.l2gatewayclient.osc.l2gw:ListL2gw
    l2gw_show = networking_l2gw.l2gatewayclient.osc.l2gw:ShowL2gw
    l2gw_delete = networking_l2gw.l2gatewayclient.osc.l2gw:DeleteL2gw
    l2gw_update = networking_l2gw.l2gatewayclient.osc.l2gw:UpdateL2gw
    l2gw_connection_create = networking_l2gw.l2gatewayclient.osc.l2gw_connection:CreateL2gwConnection
    l2gw_connection_list = networking_l2gw.l2gatewayclient.osc.l2gw_connection:ListL2gwConnection
    l2gw_connection_show = networking_l2gw.l2gatewayclient.osc.l2gw_connection:ShowL2gwConnection
    l2gw_connection_delete = networking_l2gw.l2gatewayclient.osc.l2gw_connection:DeleteL2gwConnection
neutron.service_plugins =
    l2gw = networking_l2gw.services.l2gateway.plugin:L2GatewayPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_l2gw/locale
domain = networking_l2gw

[update_catalog]
domain = networking_l2gw
output_dir = networking_l2gw/locale
input_file = networking_l2gw/locale/networking_l2gw.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_l2gw/locale/networking_l2gw.pot
